<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login"
    android:background="@color/white">

<TextView
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/log_in"
    android:textSize="35sp"
    android:textColor="#FFFFFF"
    android:layout_margin="50dp"
    android:gravity="center"
    android:textStyle="bold"
    />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/username"
    android:layout_below="@id/signin"
    android:hint="@string/username"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:background="#30FFFFFF"
    android:drawableStart="@drawable/baseline_person_outline_24"
    android:drawablePadding="20dp"
    android:autofillHints="" />


<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/username"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:background="#30FFFFFF"
    android:drawableStart="@drawable/baseline_lock_open_24"
    android:drawablePadding="20dp"
    android:hint="@string/password"
    android:padding="20dp"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"

    android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#30FFFFFF"
        android:text="@string/login"
        app:cornerRadius="0dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fpassword"
    android:text="@string/forgot_password"
    android:textColor="#FFFFFF"
    android:layout_below="@+id/login"
    android:layout_centerHorizontal="true"
    android:layout_margin="20dp"

    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_Acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0.3dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/zxing_transparent"
        android:text="@string/create_acount"
        android:textSize="12sp"
        app:cornerRadius="0dp" />



</RelativeLayout>